# Inventory-Demand-Forecast

./: README.md  docker-compose.yml
Backend/: Dockerfile  pyproject.toml  requirements.txt
Backend/api/: main.py
Backend/models/: inventory_model.pkl
Backend/src/: features.py  predict.py  train.py
Frontend/: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt
