[project]
name = "some-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "exceptiongroup==1.3.1",
    "fastapi==0.103.1",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "h11==0.16.0",
    "idna==3.11",
    "importlib-metadata==6.11.0",
    "jinja2==3.1.6",
    "joblib==1.3.2",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "narwhals==2.17.0",
    "numpy==1.24.3",
    "packaging==23.2",
    "pandas==2.1.0",
    "pillow==9.5.0",
    "plotly==6.5.2",
    "protobuf==4.25.8",
    "pyarrow==23.0.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pympler==1.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pytz-deprecation-shim==0.1.0.post0",
    "pywin32==311   ; sys_platform == 'win32'",
    "referencing==0.37.0",
    "requests==2.31.0",
    "rich==13.9.4",
    "rpds-py==0.30.0",
    "scikit-learn==1.3.0",
    "scipy==1.15.3",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "starlette==0.27.0",
    "streamlit==1.26.0",
    "tenacity==8.5.0",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tornado==6.5.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "tzlocal==4.3.1",
    "urllib3==2.6.3",
    "uvicorn==0.23.2",
    "validators==0.35.0",
    "watchdog==6.0.0",
    "xgboost==2.0.0",
    "zipp==3.23.0",
]
